--- a/.gitignore
+++ b/.gitignore
@@ -176,3 +176,5 @@ pyrightconfig.json
 # End of https://www.toptal.com/developers/gitignore/api/python
 config.py
 personal_notes.txt
+responses.db
+economy.db
